--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="col-content">
 <div class="tsd-page-title">
 <h2>graphdb-utils</h2></div>
-<div class="tsd-panel tsd-typography"><a id="md:graphdb-utils" class="tsd-anchor"></a><h1><a href="#md:graphdb-utils">graphdb-utils</a></h1><a id="md:docs" class="tsd-anchor"></a><h2><a href="#md:docs"><a href="https://csse-uoft.github.io/graphdb-utils/index.html">Docs</a></a></h2></div></div>
+<div class="tsd-panel tsd-typography"><a id="md:graphdb-utils" class="tsd-anchor"></a><h1><a href="#md:graphdb-utils">graphdb-utils</a></h1><a id="md:docs" class="tsd-anchor"></a><h2><a href="#md:docs"><a href="https://csse-uoft.github.io/graphdb-utils/modules.html">Docs</a></a></h2></div></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
