deploy: d83cf0cec580613f526bb6db54bcd53e93fddea7

--- a/functions/getIdGenerator.html
+++ b/functions/getIdGenerator.html
@@ -21,7 +21,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../classes/IDGenerator.html" class="tsd-signature-type tsd-kind-class">IDGenerator</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L26">src/loader/index.ts:26</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L26">src/loader/index.ts:26</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -72,9 +72,11 @@
 <li><a href="getGraphDBAttribute.html" class="tsd-is-private"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBAttribute</span></a></li>
 <li><a href="getGraphDBVersion.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBVersion</span></a></li>
 <li><a href="getIdGenerator.html" class="current"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Id<wbr/>Generator</span></a></li>
+<li><a href="getModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Model</span></a></li>
 <li><a href="getRepository.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Repository</span></a></li>
 <li><a href="importRepositorySnapshot.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>import<wbr/>Repository<wbr/>Snapshot</span></a></li>
 <li><a href="initGraphDB.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>init<wbr/>GraphDB</span></a></li>
+<li><a href="isModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>is<wbr/>Model</span></a></li>
 <li><a href="loadInitialData.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>load<wbr/>Initial<wbr/>Data</span></a></li>
 <li><a href="regexBuilder.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>regex<wbr/>Builder</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
