--- a/types/GraphDBModelConstructor.html
+++ b/types/GraphDBModelConstructor.html
@@ -17,7 +17,7 @@
 <h1>Type alias GraphDBModelConstructor</h1></div>
 <div class="tsd-signature"><span class="tsd-kind-type-alias">GraphDBModel<wbr/>Constructor</span><span class="tsd-signature-symbol">:</span> <a href="../classes/GraphDBModel.html" class="tsd-signature-type tsd-kind-class">GraphDBModel</a><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">data</span>, <span class="tsd-kind-parameter">options</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="../classes/GraphDBDocument.html" class="tsd-signature-type tsd-kind-class">GraphDBDocument</a><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-symbol">{ </span><br/><span>    </span>[<span class="tsd-kind-index-signature">key</span>: <span class="tsd-signature-type">string</span>]<span class="tsd-signature-symbol">: </span><a href="GDBBaseValueType.html" class="tsd-signature-type tsd-kind-type-alias">GDBBaseValueType</a><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">)</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/graphDBSchema.ts#L10">src/graphDBSchema.ts:10</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/graphDBSchema.ts#L11">src/graphDBSchema.ts:11</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -68,9 +68,11 @@
 <li><a href="../functions/getGraphDBAttribute.html" class="tsd-is-private"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBAttribute</span></a></li>
 <li><a href="../functions/getGraphDBVersion.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBVersion</span></a></li>
 <li><a href="../functions/getIdGenerator.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Id<wbr/>Generator</span></a></li>
+<li><a href="../functions/getModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Model</span></a></li>
 <li><a href="../functions/getRepository.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Repository</span></a></li>
 <li><a href="../functions/importRepositorySnapshot.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>import<wbr/>Repository<wbr/>Snapshot</span></a></li>
 <li><a href="../functions/initGraphDB.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>init<wbr/>GraphDB</span></a></li>
+<li><a href="../functions/isModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>is<wbr/>Model</span></a></li>
 <li><a href="../functions/loadInitialData.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>load<wbr/>Initial<wbr/>Data</span></a></li>
 <li><a href="../functions/regexBuilder.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>regex<wbr/>Builder</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
