--- a/classes/IDGenerator.html
+++ b/classes/IDGenerator.html
@@ -25,7 +25,7 @@
 <li><a href="MongoDBIdGenerator.html" class="tsd-signature-type tsd-kind-class">MongoDBIdGenerator</a></li>
 <li><a href="RedisIdGenerator.html" class="tsd-signature-type tsd-kind-class">RedisIdGenerator</a></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/idGenerator/base.ts#L1">src/idGenerator/base.ts:1</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/idGenerator/base.ts#L1">src/idGenerator/base.ts:1</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -61,7 +61,7 @@
 <h5><span class="tsd-kind-parameter">counterName</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/idGenerator/base.ts#L2">src/idGenerator/base.ts:2</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/idGenerator/base.ts#L2">src/idGenerator/base.ts:2</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -118,9 +118,11 @@
 <li><a href="../functions/getGraphDBAttribute.html" class="tsd-is-private"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBAttribute</span></a></li>
 <li><a href="../functions/getGraphDBVersion.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBVersion</span></a></li>
 <li><a href="../functions/getIdGenerator.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Id<wbr/>Generator</span></a></li>
+<li><a href="../functions/getModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Model</span></a></li>
 <li><a href="../functions/getRepository.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Repository</span></a></li>
 <li><a href="../functions/importRepositorySnapshot.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>import<wbr/>Repository<wbr/>Snapshot</span></a></li>
 <li><a href="../functions/initGraphDB.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>init<wbr/>GraphDB</span></a></li>
+<li><a href="../functions/isModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>is<wbr/>Model</span></a></li>
 <li><a href="../functions/loadInitialData.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>load<wbr/>Initial<wbr/>Data</span></a></li>
 <li><a href="../functions/regexBuilder.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>regex<wbr/>Builder</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
