--- a/interfaces/GraphDBUtilsConfig.html
+++ b/interfaces/GraphDBUtilsConfig.html
@@ -20,7 +20,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">GraphDBUtilsConfig</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L33">src/loader/index.ts:33</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L33">src/loader/index.ts:33</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -44,17 +44,17 @@
 <h3 class="tsd-anchor-link"><span>address</span><a href="#address" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">address</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L35">src/loader/index.ts:35</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L35">src/loader/index.ts:35</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="debug" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>debug</span><a href="#debug" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">debug</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L46">src/loader/index.ts:46</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L46">src/loader/index.ts:46</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="idGenerator" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>id<wbr/>Generator</span><a href="#idGenerator" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">id<wbr/>Generator</span><span class="tsd-signature-symbol">:</span> <a href="../classes/IDGenerator.html" class="tsd-signature-type tsd-kind-class">IDGenerator</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L45">src/loader/index.ts:45</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L45">src/loader/index.ts:45</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="namespaces" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>namespaces</span><a href="#namespaces" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">namespaces</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span><br/><span>    </span>[<span class="tsd-kind-index-signature">key</span>: <span class="tsd-signature-type">string</span>]<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span></div>
@@ -64,32 +64,32 @@
 <li class="tsd-parameter-index-signature">
 <h5><span class="tsd-signature-symbol">[</span><span class="tsd-kind-parameter">key</span>: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">string</span></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L44">src/loader/index.ts:44</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L44">src/loader/index.ts:44</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="password" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>password</span><a href="#password" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">password</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L37">src/loader/index.ts:37</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L37">src/loader/index.ts:37</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="repositoryConfig" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>repository<wbr/>Config</span><a href="#repositoryConfig" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">repository<wbr/>Config</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">object</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L43">src/loader/index.ts:43</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L43">src/loader/index.ts:43</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="repositoryDescription" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>repository<wbr/>Description</span><a href="#repositoryDescription" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">repository<wbr/>Description</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L41">src/loader/index.ts:41</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L41">src/loader/index.ts:41</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="repositoryName" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>repository<wbr/>Name</span><a href="#repositoryName" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">repository<wbr/>Name</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L39">src/loader/index.ts:39</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L39">src/loader/index.ts:39</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="username" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>username</span><a href="#username" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">username</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/dbc3711/src/loader/index.ts#L36">src/loader/index.ts:36</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/d83cf0c/src/loader/index.ts#L36">src/loader/index.ts:36</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -153,9 +153,11 @@
 <li><a href="../functions/getGraphDBAttribute.html" class="tsd-is-private"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBAttribute</span></a></li>
 <li><a href="../functions/getGraphDBVersion.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>GraphDBVersion</span></a></li>
 <li><a href="../functions/getIdGenerator.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Id<wbr/>Generator</span></a></li>
+<li><a href="../functions/getModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Model</span></a></li>
 <li><a href="../functions/getRepository.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>get<wbr/>Repository</span></a></li>
 <li><a href="../functions/importRepositorySnapshot.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>import<wbr/>Repository<wbr/>Snapshot</span></a></li>
 <li><a href="../functions/initGraphDB.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>init<wbr/>GraphDB</span></a></li>
+<li><a href="../functions/isModel.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>is<wbr/>Model</span></a></li>
 <li><a href="../functions/loadInitialData.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>load<wbr/>Initial<wbr/>Data</span></a></li>
 <li><a href="../functions/regexBuilder.html"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg><span>regex<wbr/>Builder</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
