deploy: 8be635e457fd09790748d9bdf2befcd2d3d5c946

--- a/variables/Types.html
+++ b/variables/Types.html
@@ -15,7 +15,7 @@
 <li><a href="../modules.html">graphdb-utils</a></li>
 <li><a href="Types.html">Types</a></li></ul>
 <h1>Variable Types<code class="tsd-tag ts-flagConst">Const</code> </h1></div>
-<div class="tsd-signature"><span class="tsd-kind-variable">Types</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span><br/><span>    </span><span class="tsd-kind-property">Boolean</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">BooleanConstructor</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">Date</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">DateConstructor</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">NamedIndividual</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">Number</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">NumberConstructor</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">Self</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">String</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">StringConstructor</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol"> = ...</span></div>
+<div class="tsd-signature"><span class="tsd-kind-variable">Types</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span><br/><span>    </span><span class="tsd-kind-property">Boolean</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">BooleanConstructor</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">Date</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">DateConstructor</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">NamedIndividual</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">Number</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">NumberConstructor</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">String</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">StringConstructor</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol"> = ...</span></div>
 <div class="tsd-type-declaration">
 <h4>Type declaration</h4>
 <ul class="tsd-parameters">
@@ -28,11 +28,9 @@
 <li class="tsd-parameter">
 <h5><span class="tsd-kind-property">Number</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">NumberConstructor</span></h5></li>
 <li class="tsd-parameter">
-<h5><span class="tsd-kind-property">Self</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5></li>
-<li class="tsd-parameter">
 <h5><span class="tsd-kind-property">String</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">StringConstructor</span></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/fa05c97/src/helpers.ts#L104">src/helpers.ts:104</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/8be635e/src/helpers.ts#L104">src/helpers.ts:104</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
